@@ -19,19 +19,19 @@ import org.springframework.transaction.annotation.Transactional;
 public class JdbcLinkRepository implements LinkRepository {
     private final NamedParameterJdbcTemplate jdbcTemplate;
     private final RowMapper<LinkDto> rowMapper = new DataClassRowMapper<>(LinkDto.class);
-    private final String linkIdTemplate = "LINK_ID";
-    private final String chatIdTemplate = "CHAT_ID";
+    private final String linkIdTemplate = "link_id";
+    private final String chatIdTemplate = "chat_id";
 
     @Override
     public Iterable<LinkDto> findAll() {
-        return jdbcTemplate.query("SELECT * FROM \"LINKS\"", rowMapper);
+        return jdbcTemplate.query("SELECT * FROM links", rowMapper);
     }
 
     @Override
     @Transactional
     public void add(LinkDto link) {
         jdbcTemplate.update(
-            "INSERT INTO \"LINKS\"(\"URL\", \"UPDATED_AT\") VALUES(:url, :updatedAt)",
+            "INSERT INTO links(url, updated_at) VALUES(:url, :updatedAt)",
             new BeanPropertySqlParameterSource(link)
         );
     }
@@ -40,19 +40,19 @@ public class JdbcLinkRepository implements LinkRepository {
     @Transactional
     public int remove(LinkDto link) {
         return jdbcTemplate.update(
-            "DELETE FROM \"LINKS\" WHERE \"LINK_ID\" = :LINK_ID",
+            "DELETE FROM links WHERE link_id = :link_id",
             new MapSqlParameterSource().addValue(linkIdTemplate, link.getLinkId())
         );
     }
 
     @Override
     @Transactional
-    public void map(LinkDto link, ChatDto chat) {
+    public void map(Long linkId, Long chatId) {
         jdbcTemplate.update(
-            "INSERT INTO \"LINKS_TO_CHATS\"(\"CHAT_ID\", \"LINK_ID\") VALUES(:CHAT_ID, :LINK_ID)",
+            "INSERT INTO links_to_chats(chat_id, link_id) VALUES(:chat_id, :link_id)",
             new MapSqlParameterSource()
-                .addValue(linkIdTemplate, link.getLinkId())
-                .addValue(chatIdTemplate, chat.getChatId())
+                .addValue(linkIdTemplate, linkId)
+                .addValue(chatIdTemplate, chatId)
         );
     }
 
@@ -60,7 +60,7 @@ public class JdbcLinkRepository implements LinkRepository {
     @Transactional
     public void unmap(Long linkId, Long chatId) {
         jdbcTemplate.update(
-            "DELETE FROM \"LINKS_TO_CHATS\" WHERE \"LINK_ID\" = :LINK_ID AND \"CHAT_ID\" = :CHAT_ID",
+            "DELETE FROM links_to_chats WHERE link_id = :link_id AND chat_id = :chat_id",
             new MapSqlParameterSource()
                 .addValue(linkIdTemplate, linkId)
                 .addValue(chatIdTemplate, chatId)
@@ -71,11 +71,11 @@ public class JdbcLinkRepository implements LinkRepository {
     @Transactional
     public LinkDto getByUrl(String url) {
         List<LinkDto> links = jdbcTemplate.query(
-            "SELECT * FROM \"LINKS\" WHERE \"URL\" = :url",
+            "SELECT * FROM links WHERE url = :url",
             new MapSqlParameterSource().addValue("url", url),
             rowMapper
         );
-        return !links.isEmpty() ? links.get(0) : null;
+        return links.isEmpty() ? null : links.getFirst();
     }
 
     @Override
@@ -83,9 +83,9 @@ public class JdbcLinkRepository implements LinkRepository {
     public Collection<LinkDto> findAllByChat(ChatDto chat) {
         return jdbcTemplate.query(
             """
-                SELECT L.* FROM \"LINKS_TO_CHATS\" LT
-                JOIN \"LINKS\" L ON L.\"LINK_ID\" = LT.\"LINK_ID\"
-                WHERE LT.\"CHAT_ID\" = :CHAT_ID
+                SELECT l.* FROM links_to_chats lt
+                JOIN links l ON l.link_id = lt.link_id
+                WHERE lt.chat_id = :chat_id
                 """,
             new MapSqlParameterSource().addValue(chatIdTemplate, chat.getChatId()),
             rowMapper
@@ -95,7 +95,7 @@ public class JdbcLinkRepository implements LinkRepository {
     @Override
     public Collection<LinkDto> findOlderThan(int minutes) {
         return jdbcTemplate.query(
-            "SELECT * FROM \"LINKS\" WHERE (NOW() - \"UPDATED_AT\") > (:interval * INTERVAL '1 minute')",
+            "SELECT * FROM links WHERE (NOW() - updated_at) > (:interval * INTERVAL '1 minute')",
             new MapSqlParameterSource().addValue("interval", minutes),
             rowMapper
         );
@@ -104,7 +104,7 @@ public class JdbcLinkRepository implements LinkRepository {
     @Override
     public void update(LinkDto link) {
         jdbcTemplate.update(
-            "UPDATE \"LINKS\" SET \"UPDATED_AT\" = :updatedAt WHERE \"LINK_ID\" = :LINK_ID",
+            "UPDATE links SET updated_at = :updatedAt WHERE link_id = :link_id",
             new MapSqlParameterSource()
                 .addValue("updatedAt", link.getUpdatedAt())
                 .addValue(linkIdTemplate, link.getLinkId())
@@ -115,9 +115,9 @@ public class JdbcLinkRepository implements LinkRepository {
     @Transactional
     public Collection<ChatDto> getChats(LinkDto link) {
         return jdbcTemplate.query(
-            "SELECT * FROM \"CHATS\" "
-                + "WHERE \"CHAT_ID\" IN "
-                + "(SELECT \"CHAT_ID\" FROM \"LINKS_TO_CHATS\" WHERE \"LINK_ID\" = :LINK_ID)",
+            "SELECT * FROM chats "
+                + "WHERE chat_id IN "
+                + "(SELECT chat_id FROM links_to_chats WHERE link_id = :link_id)",
             new MapSqlParameterSource().addValue(linkIdTemplate, link.getLinkId()),
             new DataClassRowMapper<>(ChatDto.class)
         );
